--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,7 @@ a:hover {
 
 body {
   margin: 0;
+  background-color: #1a1a1a;
   display: flex;
   place-items: center;
   min-width: 320px;
@@ -31,9 +32,14 @@ body {
 }
 
 h1 {
+  color: #f9f9f9;
   font-size: 3.2em;
   line-height: 1.1;
 }
+h2{
+  color: #f9f9f9;
+}
+
 
 button {
   border-radius: 8px;
